<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bacround_home2"
    android:paddingBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.detailfragment.DetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/bacround_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_back2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/fruity_pancakes"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_back"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="30dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="100dp">

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="360dp"
                android:layout_height="240dp"
                android:src="@drawable/chips"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/card_view"
            app:layout_constraintEnd_toEndOf="@id/card_view"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="6dp"
                android:background="@color/bacround_card_view_detail"
                android:backgroundTint="@color/bacround_card_view_detail"
                >

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/img_star"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="14dp"/>

                <TextView
                    android:id="@+id/tv_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/text_color_splash_activity"
                    android:text="4.8"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="14dp"/>



            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/bacround_card_view_detail"
                android:backgroundTint="@color/bacround_card_view_detail"
                >

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_fire"
                    android:layout_gravity="left|center"
                    android:layout_marginStart="15dp"/>

                <TextView
                    android:id="@+id/tv_kcal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/text_color_splash_activity"
                    android:text="@string/_160_kcal"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    />



            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/bacround_card_view_detail"
                android:backgroundTint="@color/bacround_card_view_detail"
                >

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_baseline_access_time_24"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="14dp"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/text_color_splash_activity"
                    android:text="10:10"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="14dp"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            app:layout_constraintTop_toBottomOf="@id/linear_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/text_color_splash_activity"
            android:layout_marginTop="30dp"
            android:textSize="26sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_details"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="480dp"
            app:layout_constraintEnd_toEndOf="parent"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/btn_color"
        android:text="@string/start_cooking"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="14dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>